
	* lib/rubygems/local_remote_options.rb:  Ensure remote repository URLs
	reference directories.  Fixes bug #20134 by Neil Wilson.
	* lib/rubygems/source_index.rb:  Gracefully handle ^C or explicit exit
	while loading .gemspec files from disk.  Fixes bug #20523 by Joel
	VanderWerf.
	* lib/rubygems/specification.rb:  Use File#expand_path in
	installation_path.  Fixes bug #19317 by Hemant Kumar.

2008-06-04  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/source_index.rb:  Only fetch specs we need in
	#outdated.
	* lib/rubygems.rb:  Fix typo in ::activate exception.
	* lib/rubygems/dependency.rb:  For #to_s, display dependency type when
	nil.
	* lib/rubygems/dependency_installer.rb:  Reset #installed_gems for
	every #install.  Fixes bug #19444 by Glenn Rempe.
	* lib/rubygems/installer.rb:  Don't re-read the disk to check for new
	gems, add them by hand on install.

2008-06-03  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Add ::gzip, ::gunzip, ::deflate and ::inflate.
	* lib/rubygems/server.rb:  Add specs and latest_specs indicies.
	* setup.rb:  Don't require rdoc until needed.  Patch #20414 by Brian
	Candler.
	* lib/uninstaller.rb:  Correctly uninstall gems installed with a
	legacy platform.  Patch #19877 by Luis Lavena.
	* lib/rubygems/commands/update_command.rb:  Only fetch remote specs
	when we know what we're looking for.

2008-06-02  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  Remove double slash in
	#installation_path.  Fixes bug #19896 by Heiko Seebach.
	* lib/rubygems/remote_fetcher.rb:  Require StringIO.  Fixes bug #19866
	by Caleb Land.
	* lib/rubygems.rb:  Require rubygems/defaults/#{RBX_ENGINE}.rb and
	rubygem/defaults/operating_system.rb if they exist.  (OS require comes
	first and may be overridden by operating system.)

2008-06-01  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/indexer.rb:  Ensure identical names, versions and
	platforms are identical for a smaller index.